<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.OffersFragment">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:visibility="gone"
        android:elevation="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_20dp"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:visibility="gone"
            android:src="@drawable/ic_game" />

        <TextView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/offers"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_avail_survey"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/museo_bold"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:visibility="gone"
                android:text="@string/available_surveys"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />

            <LinearLayout
                android:id="@+id/lytCpx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/tv_top_survey"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/museo_bold"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/top_surveys"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_survey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layoutAnimation="@anim/layout_animation"
                android:layout_marginRight="5dp"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_marginEnd="10dp"
                android:paddingBottom="@dimen/padding_10"
                android:scrollbars="vertical"/>

            <TextView
                android:id="@+id/tv_top_offer"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/museo_semi_bold"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/top_offers"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_offerwall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layoutAnimation="@anim/layout_animation"
                android:layout_marginRight="5dp"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_marginEnd="10dp"
                android:paddingBottom="@dimen/padding_10"
                android:scrollbars="vertical"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>


