<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".ui.activity.ScratchActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/money_box" />

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="8dp">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back" />

        </RelativeLayout>


        <TextView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/scratch_card"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lytLimit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_toolbar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_today_remaining_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:background="@drawable/bg_card_5"
            android:backgroundTint="@color/white"
            android:elevation="8dp"
            android:fontFamily="@font/museo_semi_bold"
            android:paddingVertical="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:text="@string/today_scratch"
            android:textColor="@color/colorAccent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/spinvideopoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="-10dp"
            android:background="@drawable/bg_card_5"
            android:elevation="9dp"
            android:fontFamily="@font/museo_semi_bold"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="20sp"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/lytcoin"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:lottie_autoPlay="true"
                app:lottie_imageAssetsFolder="raw"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/coin" />

            <TextView
                android:id="@+id/tv_you_ve_won"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/you_won"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/codeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:visibility="invisible" />

        </LinearLayout>

        <com.anupkumarpanwar.scratchview.ScratchView
            android:id="@+id/Scratchcard"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="visible"
            app:overlay_height="300dp"
            app:overlay_image="@drawable/scratch_placeholder"
            app:overlay_width="300dp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/museo_semi_bold"
        android:text="@string/scratch_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/BANNER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>